--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -10,5 +10,6 @@
   border-radius: 8px;
   padding: 8px 16px;
   border: none;
-  background-color: var(--primary);
+  background-color: var(--cyan);
+  font-size: 16px;
 }
