--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -1,8 +1,10 @@
 .products {
   padding-top: 56px;
   list-style: none;
-  display: flex;
   gap: 64px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 47.6%;
 }
 
 .product {
@@ -14,7 +16,6 @@
   padding: 16px;
   border-radius: 8px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  flex-basis: 164px;
 }
 
 .product__text {
@@ -27,7 +28,7 @@
 
 .product__price {
   font-weight: 700;
-  color: var(--primary);
+  color: var(--grey);
 }
 
 .product__name {
