--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -24,6 +24,7 @@
   font-size: 12px;
   line-height: 18px;
   font-weight: 400;
+  margin-bottom: 8px;
 }
 
 .order__hr {
@@ -34,17 +35,17 @@
 
 .order__list {
   width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  justify-content: end;
 }
 
 .order__item {
   list-style: none;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 24px;
-}
-
-.order__item:last-child {
-  margin-bottom: 0px;
 }
 
 .item__product {
