--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -11,5 +11,5 @@ body {
   color: var(--black);
   background: linear-gradient(180deg, #0a2a34 0%, rgba(80, 138, 156, 0.2) 100%)
     no-repeat;
-  height: 100vh;
+  height: 100%;
 }
