--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -102,11 +102,41 @@
 
 .order__button {
   padding: 8px 80px;
-  align-self: center;
+  margin: auto;
+}
+
+.order__mobile-button {
+  position: fixed;
+  bottom: 28px;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25);
+  width: 280px;
+  height: 44px;
+  font-weight: 700;
+  display: none;
 }
 
 @media screen and (max-width: 1140px) {
   .item__quantity {
     margin: 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .mobile-hidden {
+    visibility: hidden;
+  }
+
+  .order {
+    position: fixed;
+    width: 360px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .order__mobile-button {
+    display: block;
   }
 }
