--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,4 +1,4 @@
-.overlay {
+.modal {
   display: none;
   justify-content: center;
   align-items: center;
@@ -11,8 +11,13 @@
   left: 0;
 }
 
-.modal {
+.modal__container {
   background-color: var(--white);
   border-radius: 16px;
   box-shadow: 0px 6px 6px var(--boxShadow);
+  padding: 32px 24px;
+}
+
+.modal_opened {
+  display: flex;
 }
