atualizei o background, ficou mais parecido

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import url(./reset.css);
+@import url(./body.css);
 @import url(./theme.css);
 @import url(./shared.css);
 @import url(./categories.css);
