modal do sucesso

--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Inter";
   color: var(--black);
-  background: linear-gradient(180deg, #0A2A34 0%, rgba(80, 138, 156))
+  background: linear-gradient(180deg, #0A2A34 0%, #60818e)
     no-repeat;
   height: 100vh;
 }
