--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -29,3 +29,20 @@
   justify-content: center;
   gap: 2rem;
 }
+
+.modal__title{
+  font-family: "Inter", Arial, sans-serif;
+  font-style: bold;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 21px;
+}
+
+.modal__text{
+  font-family: 'Lato', Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #3A5667; 
+}
