--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -1,7 +1,7 @@
 .order {
   background: var(--white);
   flex-basis: 35%;
-  max-width: 367px;
+  min-width: 320px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
   border-radius: 16px;
   display: flex;
