--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -7,3 +7,16 @@
 .form__label {
   display: block;
 }
+
+.form__input_invalid {
+  border: 1px solid var(--danger);
+}
+
+.form__error {
+  display: none;
+  color: var(--danger);
+}
+
+.form__input_invalid + .form__error {
+  display: block;
+}
