Added alert template and showAlert function

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -8,6 +8,8 @@
   --secondary-hover: hsl(0, 0%, 50%);
   --success: hsl(126, 83%, 35%);
   --success-hover: hsl(126, 83%, 30%);
+  --danger: hsl(0, 100%, 65%);
+  --danger-hover: hsl(0, 100%, 60%);
   --edit: hsl(54, 77%, 51%);
   --edit-hover: hsl(54, 77%, 47%);
   --overlayColor: #acacac80;
