--- a/src/blocks/menu/__bar/menu__bar.css
+++ b/src/blocks/menu/__bar/menu__bar.css
@@ -6,3 +6,11 @@
   margin: 0 auto;
   justify-content: space-between;
 }
+
+@media screen and (min-width: 655px) {
+  .menu__bar {
+    margin-left: 1rem;
+    justify-content: left;
+    gap: 4rem;
+  }
+}
