--- a/src/blocks/menu/__paragraph/menu__paragraph.css
+++ b/src/blocks/menu/__paragraph/menu__paragraph.css
@@ -4,3 +4,10 @@
   line-height: 1.3;
   color: hsla(0, 0%, 67%, 1);
 }
+
+@media screen and (min-width: 655px) {
+  .menu__paragraph {
+    font-size: 1.1rem;
+    line-height: 1.3;
+  }
+}
