--- a/src/styles/alert.css
+++ b/src/styles/alert.css
@@ -1,8 +1,15 @@
-.alert {
+.alert_container {
   position: fixed;
   bottom: 50px;
   right: 50%;
   transform: translateX(50%);
+
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.alert {
   display: flex;
   align-items: center;
   column-gap: 20px;
@@ -13,15 +20,15 @@
   border-radius: 8px;
 }
 
-.alert-add {
+.alert_add {
   background-color: var(--success);
 }
 
-.alert-edit {
+.alert_edit {
   background-color: var(--primary);
 }
 
-.alert-remove {
+.alert_remove {
   background-color: var(--danger);
 }
 
@@ -46,4 +53,30 @@
 
 .alert__text-product {
   font-weight: 900;
+}
+
+@keyframes show_alert {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes hide_alert {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.show_alert {
+  animation: show_alert 0.7s;
+}
+
+.hide_alert {
+  animation: hide_alert 0.4s;
 }
