Add modification sugested by Puntar, rev1

--- a/src/blocks/menu/__image/menu__image.css
+++ b/src/blocks/menu/__image/menu__image.css
@@ -1,3 +1,9 @@
 .menu__image {
-  max-height: inherit;
+  transform: scale(0.75);
+}
+
+@media screen and (min-width: 655px) {
+  .menu__image {
+    transform: none;
+  }
 }
