--- a/src/blocks/menu/__item/menu__item.css
+++ b/src/blocks/menu/__item/menu__item.css
@@ -1,8 +1,10 @@
 .menu__item {
   display: flex;
   gap: 1rem;
-  max-height: 1rem;
   align-items: center;
+  background-color: transparent;
+  border: none;
+  padding: 0;
 }
 
 @media screen and (min-width: 655px) {
