--- a/src/blocks/menu/menu.css
+++ b/src/blocks/menu/menu.css
@@ -1,9 +1,9 @@
 .menu {
-  margin: 2.5rem 1.3rem;
+  padding: 2.5rem 1.3rem;
 }
 
 @media screen and (min-width: 655px) {
   .menu {
-    margin: 5rem;
+    padding: 5rem;
   }
 }
