--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -46,6 +46,21 @@
   justify-content: space-between;
 }
 
+@keyframes order__item-remove {
+  from {
+    transform: none;
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-5px);
+    opacity: 0;
+  }
+}
+
+.order__item-remove {
+  animation: order__item-remove 0.3s;
+}
+
 /* Coloquei margin-top no primeiro elemento da lista para fazer a lista começar por baixo */
 .order__item:first-child {
   margin-top: auto;
