adjustments on height global style

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -6,9 +6,15 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: "Inter";
   color: var(--black);
   background: linear-gradient(180deg, #0a2a34 0%, rgba(80, 138, 156, 0.2) 100%)
     no-repeat;
+  background-attachment: fixed;
 }
