fix(menu): change transform: scale from menu__image to max-height
As Puntar suggestion, tried to set max-widht in menu-image but ho help due french fries proportions. In the end of the day used max-height to maintain proportion on all images

--- a/src/blocks/menu/__image/menu__image.css
+++ b/src/blocks/menu/__image/menu__image.css
@@ -1,9 +1,9 @@
 .menu__image {
-  transform: scale(0.75);
+  max-height: 15px;
 }
 
 @media screen and (min-width: 655px) {
   .menu__image {
-    transform: none;
+    max-height: none;
   }
 }
