alterando cor para hsl

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -43,7 +43,7 @@
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.1875rem;
-  color: #3A5667; 
+  color: hsl(202.7,28%,31.6%); 
 }
 
 .text{
