--- a/src/blocks/menu/__paragraph/menu__paragraph.css
+++ b/src/blocks/menu/__paragraph/menu__paragraph.css
@@ -5,6 +5,10 @@
   color: var(--lightgrey);
 }
 
+.menu__paragraph:hover {
+  color: var(--white);
+}
+
 @media screen and (min-width: 655px) {
   .menu__paragraph {
     font-size: 1.1rem;
