--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,6 +7,7 @@
 
 @import url("../blocks/page/page.css");
 @import url("../blocks/menu/menu.css");
+@import url("../blocks/modal/modal.css");
 
 /* Elements */
 
@@ -15,3 +16,5 @@
 @import url("../blocks/menu/__paragraph/menu__paragraph.css");
 @import url("../blocks/menu/__image/menu__image.css");
 @import url("../blocks/menu/__ruler/menu__ruler.css");
+
+@import url("../blocks/modal/__container/modal__container.css");
