hotfix(menu-hover): corret hover in button
Alter class name on button to reflect corret description removing menu__item class. Remove color from menu__paragraph class to make hover work the right way. Puntar correction suggestion.

--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -1,7 +1,7 @@
-.menu__item {
+.button {
   display: flex;
   gap: 1rem;
-  align-items: center;
+  cursor: pointer;
   background-color: transparent;
   border: none;
   padding: 0;
@@ -11,8 +11,7 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.menu__item:hover {
-  cursor: pointer;
+.button:hover {
   color: var(--white);
   fill: var(--white);
   stroke: var(--white);
