--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,10 +9,11 @@
 @import url("../blocks/menu/menu.css");
 @import url("../blocks/modal/modal.css");
 
+@import url("../blocks/button/button.css");
+
 /* Elements */
 
 @import url("../blocks/menu/__bar/menu__bar.css");
-@import url("../blocks/menu/__item/menu__item.css");
 @import url("../blocks/menu/__paragraph/menu__paragraph.css");
 @import url("../blocks/menu/__image/menu__image.css");
 @import url("../blocks/menu/__ruler/menu__ruler.css");
