refact(menu-hover): change button class
Change button class from button to btn-menu. Making button class available to other section

--- a/src/blocks/btn-menu/btn-menu.css
+++ b/src/blocks/btn-menu/btn-menu.css
@@ -1,4 +1,4 @@
-.button {
+.btn-menu {
   display: flex;
   gap: 1rem;
   cursor: pointer;
@@ -11,7 +11,7 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.button:hover {
+.btn-menu:hover {
   color: var(--white);
   fill: var(--white);
   stroke: var(--white);
