--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,8 +8,7 @@
 @import url("../blocks/page/page.css");
 @import url("../blocks/menu/menu.css");
 @import url("../blocks/modal/modal.css");
-
-@import url("../blocks/button/button.css");
+@import url("../blocks/btn-menu/btn-menu.css");
 
 /* Elements */
 
