--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,7 @@
 @import url("../blocks/page/page.css");
 @import url("../blocks/menu/menu.css");
 @import url("../blocks/modal/modal.css");
+@import url("../blocks/error/error.css");
 
 /* Elements */
 
