ADD buttons css

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -3,4 +3,12 @@
   --white: hsla(0, 0%, 100%, 1);
   --background-modal: hsla(0, 0%, 68%, 0.5);
   --box-shadow: hsla(0, 0%, 0%, 0.35);
+  --lightblue: hsla(194, 75%, 44%, 1);
+  --green: hsla(126, 82%, 35%, 1);
+  --yelow: hsla(54, 77%, 51%, 1);
+  --black: hsla(0, 0%, 12%, 1);
+
+
+
+
 }
