--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,3 +18,6 @@
 @import url("../blocks/menu/__ruler/menu__ruler.css");
 
 @import url("../blocks/modal/__container/modal__container.css");
+
+/*Buttons*/
+@import url(../blocks/button/button.css);
