--- a/blocks/products/__grid/__button/products__grid__button.css
+++ b/blocks/products/__grid/__button/products__grid__button.css
@@ -1,5 +1,15 @@
 .products__grid__button{
-    width: 60%;
     align-self: center;
-    text-align: center;
+    font-size: 1rem;
+    border: none;
+    background: hsl(194, 75%, 44%);
+    border-radius: 8px;
+    padding: 8px 14px;
+    margin-bottom: 16px;
+    cursor: pointer;
+    color:hsl(0, 0%, 100%); 
+}
+
+.products__grid__button:hover{
+    background: hsl(194, 71%, 32%);
 }
