--- a/blocks/products/__grid/__item/products__grid__item.css
+++ b/blocks/products/__grid/__item/products__grid__item.css
@@ -10,3 +10,10 @@
   box-shadow: 0px 4px 4px 0px hsla(0, 0%, 0%, 0.25);
 }
 
+@media screen and (max-width: 1050px ){
+  .products__grid__item{
+   max-width: 200px;
+  }
+   
+}
+
