--- a/blocks/products/__sale-summary/__open__button/products__sale-summary__open-button.css
+++ b/blocks/products/__sale-summary/__open__button/products__sale-summary__open-button.css
@@ -1,5 +1,6 @@
 .products__sale-summary__open-button{
     font-size: 1rem;
+    font-weight: 700;
     padding: 12px 66px;
     background: hsl(43, 77%, 51%);
     border: none;
@@ -15,6 +16,7 @@
     box-shadow: 0px 8px 4px 0px hsla(0, 0%, 0%, 0.25);
     display: none;
     cursor: pointer;
+    color: hsl(0, 0%, 100%);
 }
 
 @media screen and (max-width: 850px){
