adicionando css para melhorar estilo do pedido

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,5 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/navigation/navigation.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/main/main.css);
+@import url(../blocks/item/item.css);
