last vanilla js features

--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,4 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/main/main.css);
 @import url(../blocks/item/item.css);
+@import url(../blocks/form/form.css);
