--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -1,4 +1,4 @@
-.modal {
+.popup {
   display: none;
   justify-content: center;
   align-items: center;
@@ -11,13 +11,13 @@
   left: 0;
 }
 
-.modal__container {
+.popup__container {
   background-color: var(--white);
   border-radius: 16px;
   box-shadow: 0px 6px 6px var(--boxShadow);
   padding: 32px 24px;
 }
 
-.modal_opened {
+.popup_opened {
   display: flex;
 }
