--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,14 +1,16 @@
 @import url(./reset.css);
-@import url(../blocks/theme.css);
+@import url(./theme.css);
 @import url(../blocks/page.css);
 @import url(../blocks/container.css);
 @import url(../blocks/categories.css);
 @import url(../blocks/seller.css);
+@import url(../blocks/popup.css);
 @import url(../blocks/products.css);
-@import url(../blocks/modal.css);
-@import url(../blocks/buttons.css);
+@import url(../blocks/product.css);
+@import url(../blocks/open.css);
+@import url(../blocks/button.css);
 @import url(../blocks/form.css);
 @import url(../blocks/order.css);
 @import url(../blocks/store.css);
-@import url(../blocks/action-buttons.css);
+@import url(../blocks/cta.css);
 @import url(../blocks/alert.css);
