--- a/src/blocks/form.css
+++ b/src/blocks/form.css
@@ -5,18 +5,21 @@
 }
 
 .form__label {
-  display: block;
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--inputColor);
 }
 
-.form__input_invalid {
-  border: 1px solid var(--danger);
+.form__control {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
-.form__error {
-  display: none;
-  color: var(--danger);
-}
-
-.form__input_invalid + .form__error {
-  display: block;
+.form__input {
+  min-height: 30px;
+  border: 1px solid var(--borderColor);
+  background-color: var(--inputBgColor);
+  border-radius: 8px;
+  padding: 8px;
 }
