adjust product list styles

--- a/src/blocks/products.css
+++ b/src/blocks/products.css
@@ -2,7 +2,10 @@
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  align-content: flex-start;
   gap: 64px;
-  height: fit-content;
+  max-height: 70vh;
+  overflow-y: scroll;
+  scrollbar-width: none;
   grid-area: products;
 }
