--- a/src/blocks/container.css
+++ b/src/blocks/container.css
@@ -4,9 +4,10 @@
   max-width: 1240px;
   display: grid;
   grid-template-areas:
-    "categories . seller"
-    "products . buttons"
-    "products . order";
-  grid-template-columns: 3fr 1fr 2fr;
+    "categories seller"
+    "products buttons"
+    "products order";
+  grid-template-columns: 3fr 2fr;
+  column-gap: 204px;
   padding-top: 64px;
 }
